--- a/www/index.html
+++ b/www/index.html
@@ -13,19 +13,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
-    <title>IdeaNotes</title>
+    <title>Notesd</title>
 </head>
 <body>
     <div class="form">
-        <h1><em>CoffeNotes</em></h1>
+        <h1><em>Notesd</em></h1>
         <input id="id" type="text" hidden >
         <label for="">
-            Titulo:<br>
+            <i>Titulo:</i><br>
             <input id="titulo" type="text" placeholder="Digite O Titulo: ">
 
         </label>
         <label for="">
-            Descrição:<br>
+            <i>Descrição:</i><br>
             <textarea name="" id="descricao" rows="5" placeholder="Digite A Sua Anotação: "></textarea>
         </label>
         <button class="button1" onclick="salvar()">Salvar</button>
